--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,5 +1,5 @@
 mountpoints:
   /:
-    url: "https://author-p130360-e1272151.adobeaemcloud.com/bin/franklin.delivery/adobe-rnd/aem-boilerplate-xwalk/main"
+    url: "https://author-p34616-e1463156.adobeaemcloud.com/ui#/aem/sites.html/content?appId=aemshell"
     type: "markup"
     suffix: ".html"
